Lista de frutas funcionando

--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body background="fondo.jpg">
 
+    <title>Lista de Frutas</title>
+    <font color="black"><h1 align="center"><font face="verdana">Lista de Frutas<font face="verdana"></font color></h1>
+  </head>
+  <body background="fondo2.jpg">
+    <script style="text/javascript" src="assets/js/javascript.js"></script>
+    <p align="center"><label ><font face="verdana" ><b>Frutas Master</b> es una empresa familiar de tercera feneracion dedicada a la compra, venta y distribucion de frutas al por mayor.<br></font face>
+      <font face="verdana"> En la actualidad, somo la empresa líder en el servicio de distribucion de frutas.<br></font face>
+      <img src="fondo3.jpg" alt="center">
+    </p>
+    <dir>
+      <p><b>Catálogo: </b></p>
+      </p>
+      <ol id="listaOrdenada">
+      </ol>
+    <form>
+      <input type="text" id="nuevaFruta">
+      <br><input type="submit" onclick="return agregarFruta()" value="añadir fruta">
+    </form>
+  </dir>
   </body>
 </html>
