corrigiendo faltas de ortografia e identacion

--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
   </head>
   <body background="fondo2.jpg" style="background-repeat:no-repeat;background-position:right right">
     <script style="text/javascript" src="assets/js/javascript.js"></script>
-    <p align="center"><label ><font face="verdana" ><b>Frutas Master</b> es una empresa familiar de tercera feneracion dedicada a la compra, venta y distribucion de frutas al por mayor.<br></font face>
-      <font face="verdana"> En la actualidad, somo la empresa líder en el servicio de distribucion de frutas.<br></font face>
+    <p align="center"><label ><font face="verdana" ><b>Frutas Master</b> es una empresa familiar de tercera generacion dedicada a la compra, venta y distribucion de frutas al por mayor.<br></font face>
+      <font face="verdana"> En la actualidad, somos la empresa líder en el servicio de distribucion de frutas.<br></font face>
       <img src="fondo3.jpg" alt="center">
     </p>
     <dir>
       <p><b>Catálogo: </b></p>
       </p>
       <ol id="listaOrdenada">
+        <li>Manzana</li>
+        <li>Pera</li>
+        <li>Piña</li>
       </ol>
     <form>
       <input type="text" id="nuevaFruta">
