--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Lista de Frutas</title>
     <font color="black"><h1 align="center"><font face="verdana">Lista de Frutas<font face="verdana"></font color></h1>
   </head>
-  <body background="fondo2.jpg" style="background-repeat:no-repeat;background-position:right right">
+  <body background="assets/fondo2.jpg" style="background-repeat:no-repeat;background-position:right right">
     <script style="text/javascript" src="assets/js/javascript.js"></script>
     <p align="center"><label ><font face="verdana" ><b>Frutas Master</b> es una empresa familiar de tercera generacion dedicada a la compra, venta y distribucion de frutas al por mayor.<br></font face>
       <font face="verdana"> En la actualidad, somos la empresa líder en el servicio de distribucion de frutas.<br></font face>
-      <img src="fondo3.jpg" alt="center">
+      <img src="assets/fondo3.jpg" alt="center">
     </p>
     <dir>
       <p><b>Catálogo: </b></p>
